# platform

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  copier.yml  release-please-config.json
.github/: actionlint.yml
.github/workflows/: athena-sync.yml  cadence.yml  ci-python.yml  ci.yml  codeql.yml  history-scan.yml  preview.yml  release-platform.yml  release.yml  security.yml  selftest.yml  update-major-tag.yml
handbook/: cadences.md  definition-of-done.md  incident-process.md  log-schema.json  log-schema.md  severity-levels.md
handbook/templates/: adr.md  postmortem.md  runbook.md  session-log.md
observability/: alerts.yaml  dashboard-project-health.json
renovate/: default.json
rulesets/: main.json
scripts/: lib.sh  new-project.ps1  new-project.sh  setup-machine.sh  tests.sh
security/: README.md  domain-checklist.md  gitleaks.toml  perimeter-checklist.md
security/semgrep/artemis-js/: command-injection.js  (+1 more)
selftest-fixture/: biome.json  package.json  pnpm-lock.yaml  tsconfig.json
selftest-fixture-py/: pyproject.toml
selftest-fixture-py/src/fixture/: __init__.py
selftest-fixture-py/tests/: test_fixture.py
selftest-fixture/src/: index.test.ts  index.ts
templates/cf-worker-app/: .copier-answers.yml.jinja  .gitignore  .sops.yaml  README.md.jinja  THREAT.md.jinja  biome.json  package.json.jinja  pnpm-workspace.yaml  release-please-config.json  renovate.json  tsconfig.json  wrangler.jsonc.jinja
templates/py-tool/: .gitignore  README.md.jinja  THREAT.md.jinja  pyproject.toml.jinja  release-please-config.json
(+33 files in other folders)
