[project]
name = "selftest-fixture-py"
version = "0.0.0"
description = "Minimal Python package exercising the reusable ci-python.yml workflow (spec 01)."
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fixture"]

[tool.pytest.ini_options]
addopts = "--cov=fixture"

[tool.ruff]
line-length = 100
